<resources>
    <string name="app_name">Farm</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>

    <!--土地管理-->
    <string name="add_button">添加</string>
    <string name="change_button">修改</string>
    <string name="delete_button">删除</string>
    
    <!--生产材料购买-->
    <string name="record_title">生产材料购买</string>
    <string name="record_id">编号</string>
    <string name="record_time">日期</string>
    <string name="record_name">名称</string>
    <string name="record_number">数量</string>
    <string name="record_per">单价</string>
    <string name="record_sum">总价</string>
    
</resources>
