<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--材料管理模块，包括一个title，信息显示部分，操作部分-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <!--title："生产材料购买", 包括一个图标-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:typeface="normal"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:gravity="center"
            android:drawableLeft="@drawable/buy"
            android:background="@drawable/textview_border"
            android:text="@string/record_title"/>
        <!--信息显示部分，包括：编号，日期，名称，数量，单价，总价-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:typeface="sans"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:gravity="left"
            android:background="@drawable/textview_border"
            android:text="@string/record_id"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:typeface="sans"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:gravity="left"
            android:background="@drawable/textview_border"
            android:text="@string/record_time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:typeface="sans"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:gravity="left"
            android:background="@drawable/textview_border"
            android:text="@string/record_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:typeface="sans"
            android:textSize="15sp"
            android:textColor="@color/Black"
            android:gravity="left"
            android:background="@drawable/textview_border"
            android:text="@string/record_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:typeface="sans"
                android:textSize="15sp"
                android:textColor="@color/Black"
                android:gravity="left"
                android:background="@drawable/textview_border"
                android:text="@string/record_per"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:typeface="sans"
                android:textSize="15sp"
                android:textColor="@color/Black"
                android:gravity="left"
                android:background="@drawable/textview_border"
                android:text="@string/record_sum"/>
        </LinearLayout>
        <!--操作部分，通过图标来显示，包括“历史记录”，“添加”，“搜索”-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <TextView
                android:id="@+id/history_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:drawableLeft="@drawable/history"/>
            <TextView
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:drawableLeft="@drawable/add"/>
            <TextView
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:drawableLeft="@drawable/search"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
