<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--土地管理界面，有下拉列表可以选择不同地区，地块，地位，中间是显示信息部分，最下面是
    增删改按钮-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <!--地区选择下拉菜单-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/land_area"
                />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/land_mark"
                />
            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/land_block"
                />
            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/land_station"
                />
        </LinearLayout>

        <!--信息显示部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:typeface="sans"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:background="@drawable/textview_border"
                android:text="名称"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:typeface="sans"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:background="@drawable/textview_border"
                android:text="编号"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:typeface="sans"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:background="@drawable/textview_border"
                android:text="地区"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:typeface="sans"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:background="@drawable/textview_border"
                android:text="面积"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:typeface="sans"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:background="@drawable/textview_border"
                android:text="所属"/>
        </LinearLayout>

        <!--增删改按钮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_button"/>
            <Button
                android:id="@+id/change_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/change_button"
                />
            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_button"/>

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
